Fix font, spacing

--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -87,7 +87,7 @@
 }
 
 .historyItemDetails {
-    font-family: var(--font-fira);
+    font-family: var(--font-lato);
 }
 
 .historyItemDetails h3 {
