--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -23,7 +23,7 @@
     font-size: 72px;
     font-weight: 900;
     margin-bottom: 33px;
-    font-family: var(--font-roboto);
+    font-family: var(--font-lato);
     background: linear-gradient(
         90deg,
         rgba(255, 255, 255, 1) 70%,
