--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "Fira Sans", sans-serif;
+    font-family: "Outfit", "Lato", sans-serif;
 }
 
 html {
