--- a/src/vars.css
+++ b/src/vars.css
@@ -7,6 +7,6 @@
     --color-bg: #1A1A1A;
 
     /* Fonts */
-    --font-fira: "Fira Sans";
+    --font-lato: "Lato";
 }
 
